--- a/md_demo/app/src/main/res/layout/activity_main.xml
+++ b/md_demo/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"/>
 
@@ -24,7 +25,8 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="start"/>
+            android:layout_gravity="start"
+            android:background="#3f00"/>
 
     </android.support.v4.widget.DrawerLayout>
 
