--- a/app/src/main/res/layout/activity_barrier.xml
+++ b/app/src/main/res/layout/activity_barrier.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--还未正式发布：以后完善demo-->
 
     <Button
         android:id="@+id/button22"
