--- a/databinding_demo/src/main/res/layout/activity_main.xml
+++ b/databinding_demo/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="SimpleDataActivity"
         app:layout_constraintTop_toBottomOf="@+id/button2"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintStart_toStartOf="parent"
