--- a/databinding_demo/src/main/res/layout/activity_main.xml
+++ b/databinding_demo/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="SimpleImageActivity"
         app:layout_constraintTop_toBottomOf="@+id/button3"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintStart_toStartOf="parent"
